[package]
name = "ab-helper"
version = "0.7.0"
edition = "2021"

[profile.release]
strip = "symbols"
opt-level = "s"
panic = "abort"
lto = "thin"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
globset = "0.4.14"
goblin = { version = "0.8.2", default-features = false, features = ["pe32", "pe64", "endian_fd"] }
headless_chrome = "1.0.14"
jwalk = "0.8.1"
kuchikiki = "0.8.4-speedreader"
log = "0.4.22"
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
toml_edit = "0.22.20"
ureq = { version = "2.10.1", features = ["charset"] }
url = "2.5.2"
